[gd_scene load_steps=9 format=3 uid="uid://bbw5qmd57gc5o"]

[ext_resource type="Texture2D" uid="uid://bbu4pi2pupbgl" path="res://Assets/Sprites/Robot-Reactor.png" id="1_f7uxq"]
[ext_resource type="Script" path="res://src/Scripts/Interior/Activities/reactor_engine.gd" id="1_g5pre"]
[ext_resource type="PackedScene" uid="uid://c4sw6r1gdpo4s" path="res://src/Scenes/Interior/Activities/Reactor Engine/rad_rod.tscn" id="2_w3uti"]
[ext_resource type="PackedScene" path="res://src/Scenes/Misc/interaction_sign.tscn" id="4_w2b4r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6us7d"]
atlas = ExtResource("1_f7uxq")
region = Rect2(0, 0, 287, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bye8a"]
atlas = ExtResource("1_f7uxq")
region = Rect2(287, 0, 287, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4q7oo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6us7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bye8a")
}],
"loop": true,
"name": &"working",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pxcf"]
size = Vector2(62, 37)

[node name="ReactorEngine" type="Area2D"]
script = ExtResource("1_g5pre")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="RadReactor" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4q7oo")
animation = &"working"
frame_progress = 0.778575

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(133, 45.5)
shape = SubResource("RectangleShape2D_6pxcf")

[node name="RadRod" parent="." instance=ExtResource("2_w3uti")]
position = Vector2(137, 38)

[node name="InteractionSign" parent="." instance=ExtResource("4_w2b4r")]
position = Vector2(139, -8)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
